# LearnGLES

./: build.gradle  settings.gradle
app/src/main/cpp/: AnimatedModel.cpp  AnimatedModel.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  Animdata.cpp  Animdata.h  AssetHelper.cpp  AssetHelper.h  AssimpGLMHelper.cpp  AssimpGLMHelper.h  BaseScene.cpp  BaseScene.h  Bone.cpp  Bone.h  CMakeLists.txt  Camera.cpp  Camera.h  CircleCamera.cpp  CircleCamera.h  LatitudeLongitudeCamera.cpp  LatitudeLongitudeCamera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MovableCamera.cpp  MovableCamera.h  Scene.cpp  Scene.h  SceneCommand.cpp  SceneCommand.h  SceneHelper.h  SceneTouchEvent.cpp  SceneTouchEvent.h  Shader.cpp  Shader.h  TargetCamera.cpp  TargetCamera.h  (+8 more)
app/src/main/cpp/1_getting_started/: CameraCircleScene.cpp  CameraCircleScene.h  CameraExercise1Scene.cpp  CameraExercise1Scene.h  CameraExercise2Scene.cpp  CameraExercise2Scene.h  CameraScene.cpp  CameraScene.h  CoordinateSystemDepthScene.cpp  CoordinateSystemExercise1Scene.cpp  CoordinateSystemExercise1Scene.h  CoordinateSystemExercise2Scene.cpp  CoordinateSystemExercise2Scene.h  CoordinateSystemExercise3Scene.cpp  CoordinateSystemExercise3Scene.h  CoordinateSystemExercise4Scene.cpp  CoordinateSystemExercise4Scene.h  CoordinateSystemMultipleScene.cpp  CoordinateSystemScene.cpp  CoordinateSystemScene.h  FocalLengthAndFOVScene.cpp  FocalLengthAndFOVScene.h  HelloTriangleExercise2Scene.h  HelloTriangleExercise3Scene.cpp  HelloWindowClearScene.cpp  HelloWindowClearScene.h  HelloWindowScene.cpp  HelloWindowScene.h  ShadersClassScene.cpp  ShadersExercise1Scene.cpp  ShadersExercise1Scene.h  ShadersExercise2Scene.cpp  ShadersExercise2Scene.h  ShadersExercise3Scene.cpp  ShadersInterpolationScene.cpp  ShadersInterpolationScene.h  ShadersUniformScene.cpp  TextureCombinedScene.cpp  TextureExercise1Scene.cpp  TextureExercise1Scene.h  (+15 more)
app/src/main/cpp/2_lighting/: BasicLightingDiffuseScene.cpp  BasicLightingDiffuseScene.h  BasicLightingSpecularScene.cpp  BasicLightingSpecularScene.h  ColorScene.cpp  ColorScene.h  LightingCastersDirectionalScene.cpp  LightingCastersDirectionalScene.h  LightingCastersPointScene.cpp  LightingCastersPointScene.h  LightingCastersSpotScene.cpp  LightingCastersSpotScene.h  LightingCastersSpotSoftScene.cpp  LightingCastersSpotSoftScene.h  LightingMapsDiffuseMapScene.cpp  LightingMapsDiffuseMapScene.h  LightingMapsExercise3Scene.cpp  LightingMapsExercise3Scene.h  LightingMapsExercise4Scene.cpp  LightingMapsExercise4Scene.h  LightingMapsSpecularMapScene.cpp  LightingMapsSpecularMapScene.h  MaterialExercise1Scene.cpp  MaterialExercise1Scene.h  MaterialScene.cpp  MaterialScene.h  MultipleLightsScene.cpp  MultipleLightsScene.h
app/src/main/cpp/3_model_loading/: ModelLoadingScene.cpp  ModelLoadingScene.h
app/src/main/cpp/4_advanced_opengl/: AdvancedGlslUboScene.cpp  AdvancedGlslUboScene.h  AntiAliasingMsaaScene.cpp  AntiAliasingMsaaScene.h  AntiAliasingOffscreenScene.cpp  AntiAliasingOffscreenScene.h  AsteroidInstancedScene.cpp  (+35 more)
tutorial/src/main/cpp/: AssetHelper.cpp  AssetHelper.h  CMakeLists.txt  Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneHelper.h  Shader.h  TargetCamera.cpp  TargetCamera.h  Texture.cpp  Texture.h  TimeUtil.cpp  TimeUtil.h  logutil.h  native_lib.cpp
(+454 files in other folders)
